Bug 266580 - Some contacts have no "last seen" time
Summary: Some contacts have no "last seen" time
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.0.80
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-18 02:46 UTC by Martin Blumenstingl
Modified: 2011-02-18 02:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Blumenstingl 2011-02-18 02:46:44 UTC
Version:           1.0.80 (using KDE 4.6.0) 
OS:                Linux

If a contact was online when the corresponding account went offline no "last seen" time is shown for the contact.

Reproducible: Always

Steps to Reproduce:
-Contact::setOnlineStatus() sets the last seen date of a user
-if a user goes online the "last seen" property will be removed (and "online since" will be added)
-if a user goes offline the "last seen" property is set (with the current date/time)
-if your account goes offline then nothing is done for the account's contacts

Actual Results:  
No "last seen" time is shown.

Expected Results:  
The "last seen" time should be the time when the account went offline.
Comment 1 Martin Blumenstingl 2011-02-18 02:50:53 UTC
SVN commit 1221356 by mblumenstingl:

Fix "last seen" property when an account goes offline.

BUG: 266580
REVIEW: http://svn.reviewboard.kde.org/r/6448/


 M  +6 -0      kopeteaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1221356
Comment 2 Martin Blumenstingl 2011-02-18 02:55:52 UTC
SVN commit 1221357 by mblumenstingl:

Backport of 1221356.
Fix "last seen" property when an account goes offline.

CCBUG: 266580


 M  +6 -0      kopeteaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1221357