Fix "last seen" property when an account goes offline.

BUG: 266580
REVIEW: http://svn.reviewboard.kde.org/r/6448/

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1221356